ADM-1003 [backend]: feat: re-calculate lead time for changes with source control data